Retrieve/objects/Lead.object
<CustomObject>
    <fields>
        <fullName>Brand_Of_Interest__c</fullName>
        <label>Brand Of Interest</label>
        <picklist>
            <picklistValues>
                <fullName>ALEKO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALFA ROMEO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALPINA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ASTON MARTIN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AUDI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AUSTIN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AUTOBIANCHI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AUVERLAND</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BEDFORD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BERTONE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BMW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BUICK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CADILLAC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHEVROLET</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHRYSLER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CITROEN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CORVETTE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dacia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DAEWOO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DAF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DAIHATSU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DALLAS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DANGEL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DE LA CHAPELLE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DODGE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DONKERVOORT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FERRARI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FIAT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FORD</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <picklist>
            <picklistValues>
                <fullName>Algeria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Argentina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Austria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belgium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brazil</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>China</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Colombia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Croatia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Czech Republic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DEMO Ctry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Denmark</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Estonia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>France</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Germany</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hungary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>India</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ireland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Italy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Latvia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lithuania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mexico</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Morocco</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Netherlands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nordic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Poland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Portugal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Romania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Russia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Serbia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Slovakia</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IntentToPurchaseNewVehicle__c</fullName>
        <description>Intention to purchase new vehicle.</description>
        <label>Intent to Purchase New Vehicle?</label>
        <picklist>
            <picklistValues>
                <fullName>No Intention</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Within next 6 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Within next 1 year</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Within next 2 years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Within next 3 years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Within next 4 years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Within next 5 years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&lt;1 Month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 Months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 Months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 Months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5 Months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6 - 12 Months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&gt; 12 Months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Y</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SecondVehicleOfInterest__c</fullName>
        <description>Customer second vehicle of interest.</description>
        <label>Second Vehicle of Interest</label>
        <picklist>
            <picklistValues>
                <fullName>370Z</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>370Z ROADSTER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACCESSOIRES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALPINE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ASSURANCE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AUTRE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AVANTIME</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CABSTAR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAPTUR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CLIO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CLIO 4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CLIO 4 Grandtour</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clio 4 Initiale Paris</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CLIO 4 RS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CLIO 4 SPORT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CLIO COLLECTION EXPRESS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CLIO GRANDTOUR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clio Hatch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CLIO RS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clio Sedan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CLIO SPORT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CLIO VAN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CREDIT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DACIA 1300</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DACIA 1310</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DACIA 1420</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DACIA DOUBLE CAB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DACIA PICK-UP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DACIA SPORT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DER MASTER PKW</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Second_Brand_Of_Interest__c</fullName>
        <label>Second Brand Of Interest</label>
        <picklist>
            <picklistValues>
                <fullName>ALEKO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALFA ROMEO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALPINA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ASTON MARTIN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AUDI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AUSTIN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AUTOBIANCHI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AUVERLAND</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BEDFORD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BERTONE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BMW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BUICK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CADILLAC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHEVROLET</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHRYSLER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CITROEN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CORVETTE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dacia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DAEWOO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DAF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DAIHATSU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DALLAS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DANGEL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DE LA CHAPELLE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DODGE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DONKERVOORT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FERRARI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FIAT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FORD</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SubType_Of_Interest__c</fullName>
        <label>SubType Of Interest</label>
        <picklist>
            <picklistValues>
                <fullName>Product Info Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TestDrive Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>After Sales Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Used Vehicle Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brochure Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Vehicle Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>End Of Contract</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New vehicle request (business)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New vehicle request (retail)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit purchase or leasing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cash purchase</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>After sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Autodeclics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brochure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brochure RenaultTV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brochure ZE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Campaign</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contact Individual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contact Professional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contact Professional VN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service contract</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Listing Argus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Request accessory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Purchase request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Purchase request ZE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quote request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Funding request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maintenance request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Test request</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TypeOfInterest__c</fullName>
        <description>Type of Interest.</description>
        <label>Type of Interest</label>
        <picklist>
            <picklistValues>
                <fullName>Commercial Information - Enterprise Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial Information - Personal Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Test Drive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APVA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APVM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ENT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RRENT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RSHOP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VN/VO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APV-A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APV-M</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>VehicleOfInterest__c</fullName>
        <description>Vehicle of interest.</description>
        <label>Vehicle of Interest</label>
        <picklist>
            <picklistValues>
                <fullName>370Z</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>370Z ROADSTER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACCESSOIRES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALPINE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ASSURANCE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AUTRE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AVANTIME</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CABSTAR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAPTUR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CLIO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CLIO 4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CLIO 4 Grandtour</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clio 4 Initiale Paris</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CLIO 4 RS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CLIO 4 SPORT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CLIO COLLECTION EXPRESS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CLIO GRANDTOUR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CLIO SPORT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CLIO VAN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CREDIT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DACIA 1300</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DACIA 1310</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DACIA 1420</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DACIA DOUBLE CAB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DACIA PICK-UP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DACIA SPORT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DER MASTER PKW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DEZIR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DEZIR ZE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DOKKER</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <listViews>
        <fullName>MA_LEAD_Queue_Lead</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Queue</filterScope>
        <label>MA LEAD Queue</label>
        <language>en_US</language>
        <queue>MA_LEAD_Queue</queue>
        <sharedTo>
            <roleAndSubordinatesInternal>Morocco</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>UA_LEAD_Queue_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>UA LEAD Queue</label>
        <language>en_US</language>
        <queue>UA_LEAD_Queue</queue>
        <sharedTo>
            <roleAndSubordinatesInternal>Ukraine</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>MA_Lead_RecType</fullName>
        <active>true</active>
        <businessProcess>Core Lead Process</businessProcess>
        <description>RForce Morocco Lead Record Type</description>
        <label>MA Lead RecType</label>
    </recordTypes>
    <recordTypes>
        <fullName>UA_Lead_RecType</fullName>
        <active>true</active>
        <businessProcess>Core Lead Process</businessProcess>
        <description>Ukraine lead process</description>
        <label>UA Lead RecType</label>
    </recordTypes>
</CustomObject>